# fmem

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: fmem.h.in
src/: alloc.c  fmem-fopencookie.c  fmem-funopen.c  fmem-tmpfile.c  fmem-winapi-tmpfile.c
test/: CMakeLists.txt  tests.c
